# xontrib-emacs-adwaita-dark

./: README.md  pyproject.toml
xontrib/: emacs-adwaita-dark.py
