[tool.poetry]
name = "xontrib-emacs-adwaita-dark"
version = "0.1.1"
description = "An Emacs Adwaita-Dark theme for xonsh."
authors = ["André Auzi <aauzi@free.fr>", "Angus Hollands <goosey15@gmail.com>"]
license = "MIT"
packages = [
  { include = "xontrib" }
]

[tool.poetry.dependencies]
python = ">=3.6"
xonsh = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
